# arrcat

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
src/: internals.rs  lib.rs  macros.rs  tests.rs
src/macros/: concat_array_macro.rs
